--- a/Dysnomia.HowToOpenMe.AdminPanel/Dysnomia.HowToOpenMe.AdminPanel.csproj
+++ b/Dysnomia.HowToOpenMe.AdminPanel/Dysnomia.HowToOpenMe.AdminPanel.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -7,6 +7,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
+    <PackageReference Include="Npgsql" Version="4.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dysnomia.HowToOpenMe.Business\Dysnomia.HowToOpenMe.Business.csproj" />
+    <ProjectReference Include="..\Dysnomia.HowToOpenMe.Common\Dysnomia.HowToOpenMe.Common.csproj" />
   </ItemGroup>
 
 </Project>
