--- a/Dysnomia.HowToOpenMe.Common/Dysnomia.HowToOpenMe.Common.csproj
+++ b/Dysnomia.HowToOpenMe.Common/Dysnomia.HowToOpenMe.Common.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="4.0.10" />
+  </ItemGroup>
 
 </Project>
