--- a/Dysnomia.HowToOpenMe.Business/Dysnomia.HowToOpenMe.Business.csproj
+++ b/Dysnomia.HowToOpenMe.Business/Dysnomia.HowToOpenMe.Business.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="4.0.10" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
+    <PackageReference Include="Npgsql" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
