--- a/Dysnomia.HowToOpenMe.Business/Dysnomia.HowToOpenMe.Business.csproj
+++ b/Dysnomia.HowToOpenMe.Business/Dysnomia.HowToOpenMe.Business.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql" Version="4.0.10" />
+    <PackageReference Include="Dysnomia.Common.SQL" Version="1.0.1" />
     <PackageReference Include="Npgsql" Version="4.1.1" />
   </ItemGroup>
 
