--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,14 +3,14 @@ RewriteEngine On
 RewriteRule ^ext/(.*)$ view.php?ext=$1 [QSA]
 RewriteRule ^soft/(.*)$ view.php?soft=$1 [QSA]
 
-RewriteCond %{REQUEST_FILENAME} !(.*)\.(css|jpg|png|gif|svg|js|ttf|ico|mp3|map|xml)$
+RewriteCond %{REQUEST_FILENAME} !(.*)\.(css|jpg|png|gif|svg|js|ttf|ico|mp3|map|xml|txt)$
 RewriteRule ^(.*)$ index.php?route=$1 [QSA,L]
 
 # Client Cache
 <ifmodule mod_expires.c>
 	<Filesmatch "\.(jpg|jpeg|png|gif|js|css|swf|ico|woff|mp3)$">
 	    ExpiresActive on
-	    ExpiresDefault "access plus 0 seconds"
+	    ExpiresDefault "access plus 1 week"
 	</Filesmatch>
 </ifmodule>
 
