--- a/Dysnomia.HowToOpenMe.Common/Dysnomia.HowToOpenMe.Common.csproj
+++ b/Dysnomia.HowToOpenMe.Common/Dysnomia.HowToOpenMe.Common.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dysnomia.Common.SQL" Version="1.0.4" />
+    <PackageReference Include="Dysnomia.Common.SQL" Version="1.1.0-rc1" />
     <PackageReference Include="Npgsql" Version="4.1.2" />
   </ItemGroup>
 
