Refacto massif de l'architecture afin de la faire ressembler aux autres projets

--- a/Dysnomia.HowToOpenMe.AdminPanel/Dysnomia.HowToOpenMe.AdminPanel.csproj
+++ b/Dysnomia.HowToOpenMe.AdminPanel/Dysnomia.HowToOpenMe.AdminPanel.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Dysnomia.HowToOpenMe.Business\Dysnomia.HowToOpenMe.Business.csproj" />
     <ProjectReference Include="..\Dysnomia.HowToOpenMe.Common\Dysnomia.HowToOpenMe.Common.csproj" />
+    <ProjectReference Include="..\Dysnomia.HowToOpenMe.DataAccess\Dysnomia.HowToOpenMe.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
