--- a/Dysnomia.HowToOpenMe.AdminPanel.Tests/Dysnomia.HowToOpenMe.AdminPanel.Tests.csproj
+++ b/Dysnomia.HowToOpenMe.AdminPanel.Tests/Dysnomia.HowToOpenMe.AdminPanel.Tests.csproj
@@ -26,4 +26,13 @@
     <ProjectReference Include="..\Dysnomia.HowToOpenMe.AdminPanel\Dysnomia.HowToOpenMe.AdminPanel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
