--- a/Dysnomia.HowToOpenMe.WebApp.Tests/Dysnomia.HowToOpenMe.WebApp.Tests.csproj
+++ b/Dysnomia.HowToOpenMe.WebApp.Tests/Dysnomia.HowToOpenMe.WebApp.Tests.csproj
@@ -26,4 +26,13 @@
     <ProjectReference Include="..\Dysnomia.HowToOpenMe.WebApp\Dysnomia.HowToOpenMe.WebApp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
