--- a/Dysnomia.HowToOpenMe.AdminPanel/Dysnomia.HowToOpenMe.AdminPanel.csproj
+++ b/Dysnomia.HowToOpenMe.AdminPanel/Dysnomia.HowToOpenMe.AdminPanel.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dysnomia.HowToOpenMe.Business\Dysnomia.HowToOpenMe.Business.csproj" />
     <ProjectReference Include="..\Dysnomia.HowToOpenMe.Common\Dysnomia.HowToOpenMe.Common.csproj" />
     <ProjectReference Include="..\Dysnomia.HowToOpenMe.DataAccess\Dysnomia.HowToOpenMe.DataAccess.csproj" />
