--- a/Dysnomia.HowToOpenMe.Common/Dysnomia.HowToOpenMe.Common.csproj
+++ b/Dysnomia.HowToOpenMe.Common/Dysnomia.HowToOpenMe.Common.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dysnomia.Common.SQL" Version="1.1.0-rc1" />
-    <PackageReference Include="Npgsql" Version="4.1.2" />
+    <PackageReference Include="Dysnomia.Common.SQL" Version="1.1.2" />
+    <PackageReference Include="Npgsql" Version="4.1.3.1" />
   </ItemGroup>
 
 </Project>
