--- a/Dysnomia.HowToOpenMe.WebApp/Dysnomia.HowToOpenMe.WebApp.csproj
+++ b/Dysnomia.HowToOpenMe.WebApp/Dysnomia.HowToOpenMe.WebApp.csproj
@@ -1,8 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dysnomia.Common.Stats" Version="1.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Dysnomia.HowToOpenMe.Business\Dysnomia.HowToOpenMe.Business.csproj" />
