--- a/Dysnomia.HowToOpenMe.WebApp/Dysnomia.HowToOpenMe.WebApp.csproj
+++ b/Dysnomia.HowToOpenMe.WebApp/Dysnomia.HowToOpenMe.WebApp.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dysnomia.Common.Stats" Version="1.0.0" />
+    <PackageReference Include="Dysnomia.Common.Security" Version="1.0.0" />
+    <PackageReference Include="Dysnomia.Common.Stats" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
